--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/cli": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@storybook/theming": "latest",
+    "@testing-library/react": "^8.0.2",
     "autoprefixer": "^9.6.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
